--- a/frontend/src/pages/css/Mainpage.css
+++ b/frontend/src/pages/css/Mainpage.css
@@ -6,7 +6,7 @@ header{
  display: flex;
  list-style: none;
  justify-content: space-between;
- background-color: rgb(193, 193, 255);
+ background-color: rgb(255, 248, 217);
 }
 
 
@@ -14,6 +14,8 @@ header h1{
     font-size: 20px;
     padding: 10px;
     color: rgb(19, 19, 19);
+    font-family: fantasy;
+    letter-spacing: 3px;
 }
 header nav ul{
     display: flex;
@@ -21,14 +23,41 @@ header nav ul{
 
 }
 nav li a{
-    padding: 8px;
+    padding:8px;
     margin: 10px;
-    color: rgb(188, 188, 188);
-    background-color: rgb(31, 31, 31);
+    color: rgb(0, 0, 0);
+    /* background-color: rgb(78, 78, 78); */
     border-radius: 10px;
 
+}
+nav li a{
+    font-size: 17px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 li a:hover{
     background-color: rgb(0, 3, 47);
     color: white;
 }
+
+
+.mainpageContent {
+    display: flex;
+flex-direction: column;
+  }
+  
+  .filterSection {
+    width: 100%;
+  }
+  
+  .roomsSection {
+    width: 60%;
+    padding-left: 20px; /* Add some padding for better separation */
+  }
+  
+  .roomList {
+    display: flex;
+   
+    flex-wrap: wrap;
+    gap: 20px; /* Adjust spacing between room cards */
+  }
+  
