--- a/guest-room-booking-frontend/src/pages/css/CustomerDashboardPage.css
+++ b/guest-room-booking-frontend/src/pages/css/CustomerDashboardPage.css
@@ -22,7 +22,12 @@ font-weight: bold;
     font-style: italic;
 }
 .maindashpagecustomer span{
-    color: red;
+    color: rgb(0, 51, 255);
     
 }
 
+.header .logout{
+    color: white;
+    background-color: red;
+    padding: 10px;
+}
