--- a/guest-room-booking-frontend/src/pages/css/Roomcard.css
+++ b/guest-room-booking-frontend/src/pages/css/Roomcard.css
@@ -120,10 +120,10 @@ nav li a:hover {
 
 .edit-button,
 .delete-button {
-  width: 48%;
+  width: 30%;
   background-color: #4CAF50;
   color: white;
-  padding: 10px;
+  padding: 4px;
   border: none;
   cursor: pointer;
   text-align: center;
@@ -132,7 +132,7 @@ nav li a:hover {
 }
 
 .edit-button:hover {
-  background-color: #45a049;
+  background-color: #1eff29;
 }
 
 .delete-button {
@@ -246,3 +246,16 @@ nav li a:hover {
   padding: 5px;
 }
 
+.room-details input{
+padding: 7px;
+border-radius: 5px;
+border:1px solid gray;
+margin: 4px;
+}
+.save{
+  background-color: #1eff29;
+  border: 1px solid white;
+  padding:10px;
+  color: rgb(106, 0, 0);
+  border-radius: 10px;
+}
